--- a/Personal Page.html
+++ b/Personal Page.html
@@ -37,12 +37,12 @@
   </header>
   <section>
     <h2>个人简介</h2>
-    <p>你好，我是XXX。我对计算机科学和编程充满热情，喜欢学习和探索新技术。我曾经在XXX公司工作，并参与了多个项目的开发和实施。</p>
+    <p>你好，我是耿心如。我对计算机科学和编程充满热情，喜欢学习和探索新技术。我曾经在XXX公司工作，并参与了多个项目的开发和实施。</p>
   </section>
   <section>
     <h2>技能</h2>
     <ul>
-      <li>熟练掌握Java、Python、JavaScript等编程语言</li>
+      <li>熟练掌握Python、JavaScript等编程语言</li>
       <li>熟悉Spring、Hibernate、jQuery等开发框架和库</li>
       <li>了解Hadoop、Spark等大数据技术</li>
       <li>熟悉MySQL、Oracle等数据库管理系统</li>
